--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="shortcut icon" type="image/png" href="https://cdn.jsdelivr.net/gh/zyrouge/aurora-cdn/logo.png"/>
     <title>Aurora Discord Bot</title>
   </head>
   <body>
