--- a/status.html
+++ b/status.html
@@ -30,6 +30,7 @@
             </div>
             <p class="__LOADER__CONTENT__LOADING">
                 Loading...
+                <a href="/">Go to Home</a>
             </p>
         </div>
     </div>
@@ -167,6 +168,7 @@ body {
 
 .incidents .incident .author .time {
     opacity: 0.5;
+    font-size: 15px;
 }
 
 .incidents .incident img {
@@ -175,6 +177,11 @@ body {
     height: 30px;
     border-radius: 50%;
     border: 1px solid white;
+}
+
+.incidents .incident .text {
+    width: 100%;
+    text-align: left;
 }
 
 hr {
