--- a/commands.html
+++ b/commands.html
@@ -32,12 +32,14 @@
     </div>
 
     <!-- Container -->
-    <div class="container">
-        <div class="topic">
-            <h1>Commands</h1>
+    <main>
+        <div class="container">
+            <div class="topic">
+                <h1>Commands</h1>
+            </div>
+            <div class="commands" />
         </div>
-        <div class="commands" />
-    </div>
+    </main>
 
     <!-- Footer -->
     <footer>
@@ -58,6 +60,10 @@ body {
     color: #f1f1f2;
     font-family: Montserrat, sans-serif;
     background-color: #0f1014;
+}
+
+main {
+    margin-top: 60px;
 }
 
 .topic {
