--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
     <div id="nav"></div>
 
     <!-- Container -->
-    <div class="container">
-        <div class="hero">
-            <div>
-                <h1>Aurora</h1>
-                <h4>The One and Only bot you need</h4>
-                <a href="https://discord.com/oauth2/authorize?client_id=702808552892530829&permissions=2146827775&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Fcallback&scope=bot">Invite</a>
+    <main>
+        <div class="container">
+            <div class="hero">
+                <div>
+                    <h1>Aurora</h1>
+                    <h4>The One and Only bot you need</h4>
+                    <a
+                        href="https://discord.com/oauth2/authorize?client_id=702808552892530829&permissions=2146827775&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Fcallback&scope=bot">Invite</a>
+                </div>
+                <img src="/assets/logo.png" alt="Logo">
             </div>
-            <img src="/assets/logo.png" alt="Logo">
         </div>
-    </div>
+    </main>
 
     <!-- Footer -->
     <footer>
@@ -45,6 +48,10 @@ body {
     color: #f1f1f2;
     font-family: Montserrat, sans-serif;
     background-color: #0f1014;
+}
+
+main {
+    margin-top: 60px;
 }
 
 .hero {
