--- a/navbar.html
+++ b/navbar.html
@@ -58,7 +58,13 @@ nav {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    top: 0;
     height: 60px;
+    position: fixed;
+    width: 100%;
+    overflow: hidden;
+    background-color: #0f1014;
+    z-index: 1;
 }
 
 ul {
@@ -108,13 +114,14 @@ li a:hover {
     }
 
     .links {
-        transform: translateX(100%);
-        position: absolute;
-        height: calc(100% - 60px);
+        position: fixed;
+        transform: translateX(100vw);
+        height: calc(100vh - 60px);
         top: 60px;
         right: 0;
+        bottom: 0;
         background-color: #0f1014;
-        z-index: 1;
+        z-index: 10;
         transition: 0.5s ease-in-out;
     }
 
@@ -145,7 +152,7 @@ li a:hover {
     }
 
     .links.__navbar__active__ {
-        transform: translateX(0%);
+        transform: translateX(0vw);
     }
 
     .burger.__navbar__active__ .__burger__line__:nth-child(1) {
